# DuskPool

apps/: package.json  pnpm-lock.yaml
apps/src/: App.tsx
apps/src/components/: Admin.tsx  History.tsx  Sidebar.tsx
apps/src/components/Trade/: TradeHistory.tsx  index.tsx  types.ts
apps/src/config/: api.ts
apps/src/hooks/: matchReducer.ts  useMatchState.ts  useMatchingEngineWS.ts  useRegistry.ts
circuits/: README.md  package.json
circuits/merkle/: merkle_proof.circom
circuits/poseidon/: poseidon.circom
circuits/settlement/: settlement_proof.circom
contracts/: README.md
contracts/orderbook/: Cargo.toml
contracts/orderbook/src/: lib.rs  test.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs  test.rs
matching-engine/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
matching-engine/src/: index.ts  server.ts
matching-engine/src/events/: EventBus.ts
matching-engine/src/middleware/: cors.ts
matching-engine/src/routes/: commitment.ts  matches.ts  orders.ts  settlement.ts  whitelist.ts
matching-engine/src/services/: settlement.ts
matching-engine/src/websocket/: handlers.ts  index.ts
prover/: README.md  package.json  pnpm-lock.yaml
prover/src/: index.ts  test.ts
